# CalgaryHacks2026

./: .env.example  .gitignore  README.md  TYPESENSE_SETUP.md  VECTOR_SEARCH_SUMMARY.md  composer.json  docker-compose.typesense.yml  package-lock.json  package.json  tmpclaude-bf4c-cwd  typesense.sh
app/Models/: AiDiagnosticResult.php  Comment.php  Event.php  Goal.php  Identification.php  Learnings.php  Mistake.php  User.php  UserData.php  UserLabelHistory.php  UserScoreHistory.php
app/Observers/: EventObserver.php
app/Policies/: MistakePolicy.php
app/Providers/: AppServiceProvider.php
app/Services/: FastApiClient.php  TypesenseService.php  VectorSearchService.php
config/: app.php  fastapi.php
database/factories/: LearningsFactory.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2026_02_15_003302_create_events_table.php  2026_02_15_003302_create_mistakes_table.php  2026_02_15_003521_create_identifications_table.php  2026_02_15_010357_create_learnings_table.php  2026_02_15_021031_add_title_to_events_table.php  (+15 more)
fastapi/: README.md  pyproject.toml  start.sh
fastapi/app/: app.py  constants.py  database.py  label.py  questions.py  scoring_update.py  settings.py
fastapi/app/data/: quiz.py  user_score.py
fastapi/app/models/: __init__.py  predict.py
fastapi/app/routers/: __init__.py  diagnostic.py  embeddings.py  predict.py  questions.py  root.py  scoring.py
fastapi/app/services/: ai_service.py  diagnostic.py  endpoints.py  test.py
fastapi/fastapi_prototype.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
routes/: settings.php  web.php
(+78 files in other folders)
